--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -74,9 +74,4 @@ a:hover {
   .container {
     width: 250px !important;
   }
-
-  #original-photo {
-    width: calc(100vw - 1rem);
-    height: auto;
-  }
 }
